--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -27,6 +28,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/eslint-plugin": "^1.1.10",
     "@vitest/ui": "^2.1.4",
