--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "groupon",
+  "homepage": "https://markfarl.github.io/groupon_test/",
+  "name": "groupon_test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -37,6 +38,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "history": "^5.3.0",
     "jsdom": "^25.0.1",
